cambio nombre de página

--- a/main.html
+++ b/main.html
@@ -420,13 +420,13 @@
           <td id="tbl_td" align="center" valign="bottom">
             <div id="speech_text">
               <div class="stroke-single-bg" id="speech_text-bg">
-                [Speech Recognition Subtitle-chan (Ver:2023.04.14)]
+                [Reconocimiento de Voz y traducción (v. 0.1)]
               </div>
               <div class="stroke-single-fg" id="speech_text-fg">
-                [Speech Recognition Subtitle-chan (Ver:2023.04.14)]
+                [Reconocimiento de Voz y traducción (v. 0.1)]
               </div>
               <div class="stroke-single-imb" id="speech_text-imb">
-                [Speech Recognition Subtitle-chan (Ver:2023.04.14)]
+                [Reconocimiento de Voz y traducción (v. 0.1)]
               </div>
             </div>
 
