--- a/main.html
+++ b/main.html
@@ -432,16 +432,13 @@
 
             <div id="trans_text">
               <div class="stroke-single-bg" id="trans_text-bg">
-                [Developers: Saatan & Sayonariω/(University Instructor) Ryohta
-                Nishimura]
+                [Developers: Varios]
               </div>
               <div class="stroke-single-fg" id="trans_text-fg">
-                [Developers: Saatan & Sayonariω/(University Instructor) Ryohta
-                Nishimura]
+         [Developers: Varios]
               </div>
               <div class="stroke-single-imb" id="trans_text-imb">
-                [Developers: Saatan & Sayonariω/(University Instructor) Ryohta
-                Nishimura]
+              [Developers: Varios]
               </div>
             </div>
 
