--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.bunny.net" />
+    <link
+      href="https://fonts.bunny.net/css?family=bakbak-one:400"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=M+PLUS+1p"
       rel="stylesheet"
@@ -368,6 +373,7 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('speech_text').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
+      <option value="bakbak-one">bakbak-one</option>
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
@@ -434,6 +440,7 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('trans_text').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
+      <option value="bakbak-one">bakbak-one</option>
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
@@ -500,6 +507,7 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('trans_text2').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
+      <option value="bakbak-one">bakbak-one</option>
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
