modificado archivo fonts

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('speech_text').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
-      <option value="bakbak-one">bakbak-one</option>
+      <option value="'bakbak-one', display">bakbak-one</option>
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
