actualizadas fuentes propias

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <!-- Fuentes incluídas por mi -->
     <link rel="preconnect" href="https://fonts.bunny.net" />
     <link
-      href="https://fonts.bunny.net/css?family=bakbak-one:400"
+      href="https://fonts.bunny.net/css?family=abeezee:400|aboreto:400|abyssinica-sil:400|aclonica:400|acme:400|alata:400|alegreya:400|alfa-slab-one:400|alkatra:400|allan:400|anonymous-pro:400|antic:400|atma:400|balsamiq-sans:400|bangers:400|boogaloo:400|bubblegum-sans:400|caladea:400|carter-one:400|caveat-brush:400|comfortaa:400|delicious-handrawn:400|economica:400|faster-one:400|fira-code:400,600|fredoka-one:400|fugaz-one:400|galada:400|galindo:400|inconsolata:400,600|kaushan-script:400|merienda-one:400|roboto-mono:400|source-code-pro:400|vt323:400"
       rel="stylesheet"
     />
+    <!-- fin de fuentes incluidas por mi -->
+
     <link
       href="https://fonts.googleapis.com/css?family=M+PLUS+1p"
       rel="stylesheet"
@@ -373,7 +377,44 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('speech_text').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
-      <option value="'Bakbak One', display">bakbak-one</option>
+      <!-- Ingresadas por mi -->
+      <option value="'ABeeZee', sans-serif">ABeeZee</option>
+      <option value="'Aboreto', sans-serif">Aboreto</option>
+      <option value="'Abyssinica SIL', sans-serif">Abyssinica SIL</option>
+      <option value="'Aclonica', sans-serif">Aclonica</option>
+      <option value="'Acme', sans-serif">Acme</option>
+      <option value="'Alata', sans-serif">Alata</option>
+      <option value="'Alegreya', sans-serif">Alegreya</option>
+      <option value="'Alfa Slab One', display">Alfa Slab One</option>
+      <option value="'Alkatra', sans-serif">Alkatra</option>
+      <option value="'Allan', display">Allan</option>
+      <option value="'Anonymous Pro', monospace">Anonymous Pro</option>
+      <option value="'Antic', sans-serif">Antic</option>
+      <option value="'Atma', display">Atma</option>
+      <option value="'Balsamiq Sans', cursive">Balsamiq Sans</option>
+      <option value="'Bangers', cursive">Bangers</option>
+      <option value="'Boogaloo', cursive">Boogaloo</option>
+      <option value="'Bubblegum Sans', cursive">Bubblegum Sans</option>
+      <option value="'Caladea', serif">Caladea</option>
+      <option value="'Carter One', cursive">Carter One</option>
+      <option value="'Caveat Brush', cursive">Caveat Brush</option>
+      <option value="'Comfortaa', cursive">Comfortaa</option>
+      <option value="'Delicious Handrawn', cursive">Delicious Handrawn</option>
+      <option value="'Economica', sans-serif">Economica</option>
+      <option value="'Faster One', display">Faster One</option>
+      <option value="'Fira Code', monospace">Fira Code</option>
+      <option value="'Fredoka One', cursive">Fredoka One</option>
+      <option value="'Fugaz One', display">Fugaz One</option>
+      <option value="'Galada', display">Galada</option>
+      <option value="'Galindo', display">Galindo</option>
+      <option value="'Inconsolata', monospace">Inconsolata</option>
+      <option value="'Kaushan Script', cursive">Kaushan Script</option>
+      <option value="'Merienda One', cursive">Merienda One</option>
+      <option value="'Roboto Mono', monospace">Roboto Mono</option>
+      <option value="'Source Code Pro', monospace">Source Code Pro</option>
+      <option value="'VT323', monospace">VT323</option>
+      <!--       fin de ingresadas por mi -->
+
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
@@ -440,7 +481,43 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('trans_text').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
-      <option value="bakbak-one">bakbak-one</option>
+      <!-- Ingresadas por mi -->
+      <option value="'ABeeZee', sans-serif">ABeeZee</option>
+      <option value="'Aboreto', sans-serif">Aboreto</option>
+      <option value="'Abyssinica SIL', sans-serif">Abyssinica SIL</option>
+      <option value="'Aclonica', sans-serif">Aclonica</option>
+      <option value="'Acme', sans-serif">Acme</option>
+      <option value="'Alata', sans-serif">Alata</option>
+      <option value="'Alegreya', sans-serif">Alegreya</option>
+      <option value="'Alfa Slab One', display">Alfa Slab One</option>
+      <option value="'Alkatra', sans-serif">Alkatra</option>
+      <option value="'Allan', display">Allan</option>
+      <option value="'Anonymous Pro', monospace">Anonymous Pro</option>
+      <option value="'Antic', sans-serif">Antic</option>
+      <option value="'Atma', display">Atma</option>
+      <option value="'Balsamiq Sans', cursive">Balsamiq Sans</option>
+      <option value="'Bangers', cursive">Bangers</option>
+      <option value="'Boogaloo', cursive">Boogaloo</option>
+      <option value="'Bubblegum Sans', cursive">Bubblegum Sans</option>
+      <option value="'Caladea', serif">Caladea</option>
+      <option value="'Carter One', cursive">Carter One</option>
+      <option value="'Caveat Brush', cursive">Caveat Brush</option>
+      <option value="'Comfortaa', cursive">Comfortaa</option>
+      <option value="'Delicious Handrawn', cursive">Delicious Handrawn</option>
+      <option value="'Economica', sans-serif">Economica</option>
+      <option value="'Faster One', display">Faster One</option>
+      <option value="'Fira Code', monospace">Fira Code</option>
+      <option value="'Fredoka One', cursive">Fredoka One</option>
+      <option value="'Fugaz One', display">Fugaz One</option>
+      <option value="'Galada', display">Galada</option>
+      <option value="'Galindo', display">Galindo</option>
+      <option value="'Inconsolata', monospace">Inconsolata</option>
+      <option value="'Kaushan Script', cursive">Kaushan Script</option>
+      <option value="'Merienda One', cursive">Merienda One</option>
+      <option value="'Roboto Mono', monospace">Roboto Mono</option>
+      <option value="'Source Code Pro', monospace">Source Code Pro</option>
+      <option value="'VT323', monospace">VT323</option>
+      <!--       fin de ingresadas por mi -->
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
@@ -507,7 +584,43 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('trans_text2').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
-      <option value="bakbak-one">bakbak-one</option>
+      <!-- Ingresadas por mi -->
+      <option value="'ABeeZee', sans-serif">ABeeZee</option>
+      <option value="'Aboreto', sans-serif">Aboreto</option>
+      <option value="'Abyssinica SIL', sans-serif">Abyssinica SIL</option>
+      <option value="'Aclonica', sans-serif">Aclonica</option>
+      <option value="'Acme', sans-serif">Acme</option>
+      <option value="'Alata', sans-serif">Alata</option>
+      <option value="'Alegreya', sans-serif">Alegreya</option>
+      <option value="'Alfa Slab One', display">Alfa Slab One</option>
+      <option value="'Alkatra', sans-serif">Alkatra</option>
+      <option value="'Allan', display">Allan</option>
+      <option value="'Anonymous Pro', monospace">Anonymous Pro</option>
+      <option value="'Antic', sans-serif">Antic</option>
+      <option value="'Atma', display">Atma</option>
+      <option value="'Balsamiq Sans', cursive">Balsamiq Sans</option>
+      <option value="'Bangers', cursive">Bangers</option>
+      <option value="'Boogaloo', cursive">Boogaloo</option>
+      <option value="'Bubblegum Sans', cursive">Bubblegum Sans</option>
+      <option value="'Caladea', serif">Caladea</option>
+      <option value="'Carter One', cursive">Carter One</option>
+      <option value="'Caveat Brush', cursive">Caveat Brush</option>
+      <option value="'Comfortaa', cursive">Comfortaa</option>
+      <option value="'Delicious Handrawn', cursive">Delicious Handrawn</option>
+      <option value="'Economica', sans-serif">Economica</option>
+      <option value="'Faster One', display">Faster One</option>
+      <option value="'Fira Code', monospace">Fira Code</option>
+      <option value="'Fredoka One', cursive">Fredoka One</option>
+      <option value="'Fugaz One', display">Fugaz One</option>
+      <option value="'Galada', display">Galada</option>
+      <option value="'Galindo', display">Galindo</option>
+      <option value="'Inconsolata', monospace">Inconsolata</option>
+      <option value="'Kaushan Script', cursive">Kaushan Script</option>
+      <option value="'Merienda One', cursive">Merienda One</option>
+      <option value="'Roboto Mono', monospace">Roboto Mono</option>
+      <option value="'Source Code Pro', monospace">Source Code Pro</option>
+      <option value="'VT323', monospace">VT323</option>
+      <!--       fin de ingresadas por mi -->
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
