--- a/index.html
+++ b/index.html
@@ -377,44 +377,46 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('speech_text').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
-      <!-- Ingresadas por mi -->
+      <!-- Incluidas por mí -->
       <option value="'ABeeZee', sans-serif">ABeeZee</option>
-      <option value="'Aboreto', sans-serif">Aboreto</option>
-      <option value="'Abyssinica SIL', sans-serif">Abyssinica SIL</option>
+      <option value="'Aboreto', display">Aboreto</option>
+      <option value="'Abyssinica SIL', serif">Abyssinica SIL</option>
       <option value="'Aclonica', sans-serif">Aclonica</option>
       <option value="'Acme', sans-serif">Acme</option>
       <option value="'Alata', sans-serif">Alata</option>
-      <option value="'Alegreya', sans-serif">Alegreya</option>
+      <option value="'Alegreya', serif">Alegreya</option>
       <option value="'Alfa Slab One', display">Alfa Slab One</option>
-      <option value="'Alkatra', sans-serif">Alkatra</option>
+      <option value="'Alkatra', display">Alkatra</option>
       <option value="'Allan', display">Allan</option>
       <option value="'Anonymous Pro', monospace">Anonymous Pro</option>
       <option value="'Antic', sans-serif">Antic</option>
       <option value="'Atma', display">Atma</option>
-      <option value="'Balsamiq Sans', cursive">Balsamiq Sans</option>
-      <option value="'Bangers', cursive">Bangers</option>
-      <option value="'Boogaloo', cursive">Boogaloo</option>
-      <option value="'Bubblegum Sans', cursive">Bubblegum Sans</option>
+      <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
+      <option value="'Bangers', display">Bangers</option>
+      <option value="'Boogaloo', display">Boogaloo</option>
+      <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
-      <option value="'Carter One', cursive">Carter One</option>
-      <option value="'Caveat Brush', cursive">Caveat Brush</option>
-      <option value="'Comfortaa', cursive">Comfortaa</option>
-      <option value="'Delicious Handrawn', cursive">Delicious Handrawn</option>
+      <option value="'Carter One', display">Carter One</option>
+      <option value="'Caveat Brush', handwriting">Caveat Brush</option>
+      <option value="'Comfortaa', display">Comfortaa</option>
+      <option value="'Delicious Handrawn', handwriting">
+        Delicious Handrawn
+      </option>
       <option value="'Economica', sans-serif">Economica</option>
       <option value="'Faster One', display">Faster One</option>
       <option value="'Fira Code', monospace">Fira Code</option>
-      <option value="'Fredoka One', cursive">Fredoka One</option>
+      <option value="'Fredoka One', display">Fredoka One</option>
       <option value="'Fugaz One', display">Fugaz One</option>
       <option value="'Galada', display">Galada</option>
       <option value="'Galindo', display">Galindo</option>
       <option value="'Inconsolata', monospace">Inconsolata</option>
-      <option value="'Kaushan Script', cursive">Kaushan Script</option>
-      <option value="'Merienda One', cursive">Merienda One</option>
+      <option value="'Kaushan Script', handwriting">Kaushan Script</option>
+      <option value="'Merienda One', handwriting">Merienda One</option>
       <option value="'Roboto Mono', monospace">Roboto Mono</option>
       <option value="'Source Code Pro', monospace">Source Code Pro</option>
       <option value="'VT323', monospace">VT323</option>
-      <!--       fin de ingresadas por mi -->
 
+      <!-- Fin de incluídas por mí -->
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
@@ -481,43 +483,46 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('trans_text').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
-      <!-- Ingresadas por mi -->
+      <!-- Incluidas por mí -->
       <option value="'ABeeZee', sans-serif">ABeeZee</option>
-      <option value="'Aboreto', sans-serif">Aboreto</option>
-      <option value="'Abyssinica SIL', sans-serif">Abyssinica SIL</option>
+      <option value="'Aboreto', display">Aboreto</option>
+      <option value="'Abyssinica SIL', serif">Abyssinica SIL</option>
       <option value="'Aclonica', sans-serif">Aclonica</option>
       <option value="'Acme', sans-serif">Acme</option>
       <option value="'Alata', sans-serif">Alata</option>
-      <option value="'Alegreya', sans-serif">Alegreya</option>
+      <option value="'Alegreya', serif">Alegreya</option>
       <option value="'Alfa Slab One', display">Alfa Slab One</option>
-      <option value="'Alkatra', sans-serif">Alkatra</option>
+      <option value="'Alkatra', display">Alkatra</option>
       <option value="'Allan', display">Allan</option>
       <option value="'Anonymous Pro', monospace">Anonymous Pro</option>
       <option value="'Antic', sans-serif">Antic</option>
       <option value="'Atma', display">Atma</option>
-      <option value="'Balsamiq Sans', cursive">Balsamiq Sans</option>
-      <option value="'Bangers', cursive">Bangers</option>
-      <option value="'Boogaloo', cursive">Boogaloo</option>
-      <option value="'Bubblegum Sans', cursive">Bubblegum Sans</option>
+      <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
+      <option value="'Bangers', display">Bangers</option>
+      <option value="'Boogaloo', display">Boogaloo</option>
+      <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
-      <option value="'Carter One', cursive">Carter One</option>
-      <option value="'Caveat Brush', cursive">Caveat Brush</option>
-      <option value="'Comfortaa', cursive">Comfortaa</option>
-      <option value="'Delicious Handrawn', cursive">Delicious Handrawn</option>
+      <option value="'Carter One', display">Carter One</option>
+      <option value="'Caveat Brush', handwriting">Caveat Brush</option>
+      <option value="'Comfortaa', display">Comfortaa</option>
+      <option value="'Delicious Handrawn', handwriting">
+        Delicious Handrawn
+      </option>
       <option value="'Economica', sans-serif">Economica</option>
       <option value="'Faster One', display">Faster One</option>
       <option value="'Fira Code', monospace">Fira Code</option>
-      <option value="'Fredoka One', cursive">Fredoka One</option>
+      <option value="'Fredoka One', display">Fredoka One</option>
       <option value="'Fugaz One', display">Fugaz One</option>
       <option value="'Galada', display">Galada</option>
       <option value="'Galindo', display">Galindo</option>
       <option value="'Inconsolata', monospace">Inconsolata</option>
-      <option value="'Kaushan Script', cursive">Kaushan Script</option>
-      <option value="'Merienda One', cursive">Merienda One</option>
+      <option value="'Kaushan Script', handwriting">Kaushan Script</option>
+      <option value="'Merienda One', handwriting">Merienda One</option>
       <option value="'Roboto Mono', monospace">Roboto Mono</option>
       <option value="'Source Code Pro', monospace">Source Code Pro</option>
       <option value="'VT323', monospace">VT323</option>
-      <!--       fin de ingresadas por mi -->
+
+      <!-- Fin de incluídas por mí -->
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
@@ -584,43 +589,47 @@
       onchange="document.getElementById('asr_frame').contentWindow.document.getElementById('trans_text2').style.fontFamily = this.value; selectFont();"
     >
       <option value="direct">[Direct Specification]</option>
-      <!-- Ingresadas por mi -->
+      <!-- Incluidas por mí -->
       <option value="'ABeeZee', sans-serif">ABeeZee</option>
-      <option value="'Aboreto', sans-serif">Aboreto</option>
-      <option value="'Abyssinica SIL', sans-serif">Abyssinica SIL</option>
+      <option value="'Aboreto', display">Aboreto</option>
+      <option value="'Abyssinica SIL', serif">Abyssinica SIL</option>
       <option value="'Aclonica', sans-serif">Aclonica</option>
       <option value="'Acme', sans-serif">Acme</option>
       <option value="'Alata', sans-serif">Alata</option>
-      <option value="'Alegreya', sans-serif">Alegreya</option>
+      <option value="'Alegreya', serif">Alegreya</option>
       <option value="'Alfa Slab One', display">Alfa Slab One</option>
-      <option value="'Alkatra', sans-serif">Alkatra</option>
+      <option value="'Alkatra', display">Alkatra</option>
       <option value="'Allan', display">Allan</option>
       <option value="'Anonymous Pro', monospace">Anonymous Pro</option>
       <option value="'Antic', sans-serif">Antic</option>
       <option value="'Atma', display">Atma</option>
-      <option value="'Balsamiq Sans', cursive">Balsamiq Sans</option>
-      <option value="'Bangers', cursive">Bangers</option>
-      <option value="'Boogaloo', cursive">Boogaloo</option>
-      <option value="'Bubblegum Sans', cursive">Bubblegum Sans</option>
+      <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
+      <option value="'Bangers', display">Bangers</option>
+      <option value="'Boogaloo', display">Boogaloo</option>
+      <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
-      <option value="'Carter One', cursive">Carter One</option>
-      <option value="'Caveat Brush', cursive">Caveat Brush</option>
-      <option value="'Comfortaa', cursive">Comfortaa</option>
-      <option value="'Delicious Handrawn', cursive">Delicious Handrawn</option>
+      <option value="'Carter One', display">Carter One</option>
+      <option value="'Caveat Brush', handwriting">Caveat Brush</option>
+      <option value="'Comfortaa', display">Comfortaa</option>
+      <option value="'Delicious Handrawn', handwriting">
+        Delicious Handrawn
+      </option>
       <option value="'Economica', sans-serif">Economica</option>
       <option value="'Faster One', display">Faster One</option>
       <option value="'Fira Code', monospace">Fira Code</option>
-      <option value="'Fredoka One', cursive">Fredoka One</option>
+      <option value="'Fredoka One', display">Fredoka One</option>
       <option value="'Fugaz One', display">Fugaz One</option>
       <option value="'Galada', display">Galada</option>
       <option value="'Galindo', display">Galindo</option>
       <option value="'Inconsolata', monospace">Inconsolata</option>
-      <option value="'Kaushan Script', cursive">Kaushan Script</option>
-      <option value="'Merienda One', cursive">Merienda One</option>
+      <option value="'Kaushan Script', handwriting">Kaushan Script</option>
+      <option value="'Merienda One', handwriting">Merienda One</option>
       <option value="'Roboto Mono', monospace">Roboto Mono</option>
       <option value="'Source Code Pro', monospace">Source Code Pro</option>
       <option value="'VT323', monospace">VT323</option>
-      <!--       fin de ingresadas por mi -->
+
+      <!-- Fin de incluídas por mí -->
+
       <option value="M PLUS\ 1p">M PLUS 1p</option>
       <option value="M PLUS Rounded\ 1c" selected>M PLUS Rounded 1c</option>
       <option value="Mamelon">Mamelon</option>
