--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       <option value="'Antic', sans-serif">Antic</option>
       <option value="'Atma', display">Atma</option>
       <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
-      <option value="'Bangers', display">Bangers</option>
+      <option value="'Bangers'">Bangers</option>
       <option value="'Boogaloo', display">Boogaloo</option>
       <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
@@ -498,7 +498,7 @@
       <option value="'Antic', sans-serif">Antic</option>
       <option value="'Atma', display">Atma</option>
       <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
-      <option value="'Bangers', display">Bangers</option>
+      <option value="'Bangers'">Bangers</option>
       <option value="'Boogaloo', display">Boogaloo</option>
       <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
@@ -604,7 +604,7 @@
       <option value="'Antic', sans-serif">Antic</option>
       <option value="'Atma', display">Atma</option>
       <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
-      <option value="'Bangers', display">Bangers</option>
+      <option value="'Bangers'">Bangers</option>
       <option value="'Boogaloo', display">Boogaloo</option>
       <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
