--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
       <option value="'Atma', display">Atma</option>
       <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
       <option value="'Bangers'">Bangers</option>
+      <option value="Bangers2">Bangers 2</option>
       <option value="'Boogaloo', display">Boogaloo</option>
       <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
@@ -606,6 +607,7 @@
       <option value="'Atma', display">Atma</option>
       <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
       <option value="'Bangers'">Bangers</option>
+      <option value="Bangers2">Bangers 2</option>
       <option value="'Boogaloo', display">Boogaloo</option>
       <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
