más cambios en fuentes

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       <option value="'Antic', sans-serif">Antic</option>
       <option value="'Atma', display">Atma</option>
       <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
-      <option value="'Bangers', cursive">Bangers</option>
+      <option value="Bangers">Bangers</option>
       <option value="'Boogaloo', display">Boogaloo</option>
       <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
@@ -504,7 +504,7 @@
       <option value="'Antic', sans-serif">Antic</option>
       <option value="'Atma', display">Atma</option>
       <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
-      <option value="'Bangers', cursive">Bangers</option>
+      <option value="Bangers">Bangers</option>
       <option value="'Boogaloo', display">Boogaloo</option>
       <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
@@ -610,7 +610,7 @@
       <option value="'Antic', sans-serif">Antic</option>
       <option value="'Atma', display">Atma</option>
       <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
-      <option value="'Bangers', cursive">Bangers</option>
+      <option value="Bangers">Bangers</option>
       <option value="'Boogaloo', display">Boogaloo</option>
       <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
       <option value="'Caladea', serif">Caladea</option>
