cambios en fuentes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <!-- Fuentes incluídas por mi -->
     <link rel="preconnect" href="https://fonts.bunny.net" />
     <link
-      href="https://fonts.bunny.net/css?family=abeezee:400|aboreto:400|abyssinica-sil:400|aclonica:400|acme:400|alata:400|alegreya:400|alfa-slab-one:400|alkatra:400|allan:400|anonymous-pro:400|antic:400|atma:400|balsamiq-sans:400|boogaloo:400|bubblegum-sans:400|caladea:400|carter-one:400|caveat-brush:400|comfortaa:400|delicious-handrawn:400|economica:400|faster-one:400|fira-code:400,600|fredoka-one:400|fugaz-one:400|galada:400|galindo:400|inconsolata:400,600|kaushan-script:400|merienda-one:400|roboto-mono:400|source-code-pro:400|vt323:400"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
+      href="https://fonts.bunny.net/css?family=abeezee:400|aboreto:400|abyssinica-sil:400|aclonica:400|acme:400|alata:400|alegreya:400|alfa-slab-one:400|alkatra:400|allan:400|anonymous-pro:400|antic:400|atma:400|balsamiq-sans:400|bangers:400|boogaloo:400|bubblegum-sans:400|caladea:400|carter-one:400|caveat-brush:400|comfortaa:400|delicious-handrawn:400|economica:400|faster-one:400|fira-code:400,600|fredoka-one:400|fugaz-one:400|galada:400|galindo:400|inconsolata:400,600|kaushan-script:400|merienda-one:400|roboto-mono:400|source-code-pro:400|vt323:400"
       rel="stylesheet"
     />
     <!-- fin de fuentes incluidas por mi -->
@@ -384,43 +378,41 @@
     >
       <option value="direct">[Direct Specification]</option>
       <!-- Incluidas por mí -->
-      <option value="'ABeeZee', sans-serif">ABeeZee</option>
-      <option value="'Aboreto', display">Aboreto</option>
-      <option value="'Abyssinica SIL', serif">Abyssinica SIL</option>
-      <option value="'Aclonica', sans-serif">Aclonica</option>
-      <option value="'Acme', sans-serif">Acme</option>
-      <option value="'Alata', sans-serif">Alata</option>
-      <option value="'Alegreya', serif">Alegreya</option>
-      <option value="'Alfa Slab One', display">Alfa Slab One</option>
-      <option value="'Alkatra', display">Alkatra</option>
-      <option value="'Allan', display">Allan</option>
-      <option value="'Anonymous Pro', monospace">Anonymous Pro</option>
-      <option value="'Antic', sans-serif">Antic</option>
-      <option value="'Atma', display">Atma</option>
-      <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
+      <option value="ABeeZee">ABeeZee</option>
+      <option value="Aboreto">Aboreto</option>
+      <option value="Abyssinica SIL">Abyssinica SIL</option>
+      <option value="Aclonica">Aclonica</option>
+      <option value="Acme">Acme</option>
+      <option value="Alata">Alata</option>
+      <option value="Alegreya">Alegreya</option>
+      <option value="Alfa Slab One">Alfa Slab One</option>
+      <option value="Alkatra">Alkatra</option>
+      <option value="Allan">Allan</option>
+      <option value="Anonymous Pro">Anonymous Pro</option>
+      <option value="Antic">Antic</option>
+      <option value="Atma">Atma</option>
+      <option value="Balsamiq Sans">Balsamiq Sans</option>
       <option value="Bangers">Bangers</option>
-      <option value="'Boogaloo', display">Boogaloo</option>
-      <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
-      <option value="'Caladea', serif">Caladea</option>
-      <option value="'Carter One', display">Carter One</option>
-      <option value="'Caveat Brush', handwriting">Caveat Brush</option>
-      <option value="'Comfortaa', display">Comfortaa</option>
-      <option value="'Delicious Handrawn', handwriting">
-        Delicious Handrawn
-      </option>
-      <option value="'Economica', sans-serif">Economica</option>
-      <option value="'Faster One', display">Faster One</option>
-      <option value="'Fira Code', monospace">Fira Code</option>
-      <option value="'Fredoka One', display">Fredoka One</option>
-      <option value="'Fugaz One', display">Fugaz One</option>
-      <option value="'Galada', display">Galada</option>
-      <option value="'Galindo', display">Galindo</option>
-      <option value="'Inconsolata', monospace">Inconsolata</option>
-      <option value="'Kaushan Script', handwriting">Kaushan Script</option>
-      <option value="'Merienda One', handwriting">Merienda One</option>
-      <option value="'Roboto Mono', monospace">Roboto Mono</option>
-      <option value="'Source Code Pro', monospace">Source Code Pro</option>
-      <option value="'VT323', monospace">VT323</option>
+      <option value="Boogaloo">Boogaloo</option>
+      <option value="Bubblegum Sans">Bubblegum Sans</option>
+      <option value="Caladea">Caladea</option>
+      <option value="Carter One">Carter One</option>
+      <option value="Caveat Brush">Caveat Brush</option>
+      <option value="Comfortaa">Comfortaa</option>
+      <option value="Delicious Handrawn">Delicious Handrawn</option>
+      <option value="Economica">Economica</option>
+      <option value="Faster One">Faster One</option>
+      <option value="Fira Code">Fira Code</option>
+      <option value="Fredoka One">Fredoka One</option>
+      <option value="Fugaz One">Fugaz One</option>
+      <option value="Galada">Galada</option>
+      <option value="Galindo">Galindo</option>
+      <option value="Inconsolata">Inconsolata</option>
+      <option value="Kaushan Script">Kaushan Script</option>
+      <option value="Merienda One">Merienda One</option>
+      <option value="Roboto Mono">Roboto Mono</option>
+      <option value="Source Code Pro">Source Code Pro</option>
+      <option value="VT323">VT323</option>
 
       <!-- Fin de incluídas por mí -->
       <option value="M PLUS\ 1p">M PLUS 1p</option>
@@ -490,43 +482,41 @@
     >
       <option value="direct">[Direct Specification]</option>
       <!-- Incluidas por mí -->
-      <option value="'ABeeZee', sans-serif">ABeeZee</option>
-      <option value="'Aboreto', display">Aboreto</option>
-      <option value="'Abyssinica SIL', serif">Abyssinica SIL</option>
-      <option value="'Aclonica', sans-serif">Aclonica</option>
-      <option value="'Acme', sans-serif">Acme</option>
-      <option value="'Alata', sans-serif">Alata</option>
-      <option value="'Alegreya', serif">Alegreya</option>
-      <option value="'Alfa Slab One', display">Alfa Slab One</option>
-      <option value="'Alkatra', display">Alkatra</option>
-      <option value="'Allan', display">Allan</option>
-      <option value="'Anonymous Pro', monospace">Anonymous Pro</option>
-      <option value="'Antic', sans-serif">Antic</option>
-      <option value="'Atma', display">Atma</option>
-      <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
+      <option value="ABeeZee">ABeeZee</option>
+      <option value="Aboreto">Aboreto</option>
+      <option value="Abyssinica SIL">Abyssinica SIL</option>
+      <option value="Aclonica">Aclonica</option>
+      <option value="Acme">Acme</option>
+      <option value="Alata">Alata</option>
+      <option value="Alegreya">Alegreya</option>
+      <option value="Alfa Slab One">Alfa Slab One</option>
+      <option value="Alkatra">Alkatra</option>
+      <option value="Allan">Allan</option>
+      <option value="Anonymous Pro">Anonymous Pro</option>
+      <option value="Antic">Antic</option>
+      <option value="Atma">Atma</option>
+      <option value="Balsamiq Sans">Balsamiq Sans</option>
       <option value="Bangers">Bangers</option>
-      <option value="'Boogaloo', display">Boogaloo</option>
-      <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
-      <option value="'Caladea', serif">Caladea</option>
-      <option value="'Carter One', display">Carter One</option>
-      <option value="'Caveat Brush', handwriting">Caveat Brush</option>
-      <option value="'Comfortaa', display">Comfortaa</option>
-      <option value="'Delicious Handrawn', handwriting">
-        Delicious Handrawn
-      </option>
-      <option value="'Economica', sans-serif">Economica</option>
-      <option value="'Faster One', display">Faster One</option>
-      <option value="'Fira Code', monospace">Fira Code</option>
-      <option value="'Fredoka One', display">Fredoka One</option>
-      <option value="'Fugaz One', display">Fugaz One</option>
-      <option value="'Galada', display">Galada</option>
-      <option value="'Galindo', display">Galindo</option>
-      <option value="'Inconsolata', monospace">Inconsolata</option>
-      <option value="'Kaushan Script', handwriting">Kaushan Script</option>
-      <option value="'Merienda One', handwriting">Merienda One</option>
-      <option value="'Roboto Mono', monospace">Roboto Mono</option>
-      <option value="'Source Code Pro', monospace">Source Code Pro</option>
-      <option value="'VT323', monospace">VT323</option>
+      <option value="Boogaloo">Boogaloo</option>
+      <option value="Bubblegum Sans">Bubblegum Sans</option>
+      <option value="Caladea">Caladea</option>
+      <option value="Carter One">Carter One</option>
+      <option value="Caveat Brush">Caveat Brush</option>
+      <option value="Comfortaa">Comfortaa</option>
+      <option value="Delicious Handrawn">Delicious Handrawn</option>
+      <option value="Economica">Economica</option>
+      <option value="Faster One">Faster One</option>
+      <option value="Fira Code">Fira Code</option>
+      <option value="Fredoka One">Fredoka One</option>
+      <option value="Fugaz One">Fugaz One</option>
+      <option value="Galada">Galada</option>
+      <option value="Galindo">Galindo</option>
+      <option value="Inconsolata">Inconsolata</option>
+      <option value="Kaushan Script">Kaushan Script</option>
+      <option value="Merienda One">Merienda One</option>
+      <option value="Roboto Mono">Roboto Mono</option>
+      <option value="Source Code Pro">Source Code Pro</option>
+      <option value="VT323">VT323</option>
 
       <!-- Fin de incluídas por mí -->
       <option value="M PLUS\ 1p">M PLUS 1p</option>
@@ -596,43 +586,41 @@
     >
       <option value="direct">[Direct Specification]</option>
       <!-- Incluidas por mí -->
-      <option value="'ABeeZee', sans-serif">ABeeZee</option>
-      <option value="'Aboreto', display">Aboreto</option>
-      <option value="'Abyssinica SIL', serif">Abyssinica SIL</option>
-      <option value="'Aclonica', sans-serif">Aclonica</option>
-      <option value="'Acme', sans-serif">Acme</option>
-      <option value="'Alata', sans-serif">Alata</option>
-      <option value="'Alegreya', serif">Alegreya</option>
-      <option value="'Alfa Slab One', display">Alfa Slab One</option>
-      <option value="'Alkatra', display">Alkatra</option>
-      <option value="'Allan', display">Allan</option>
-      <option value="'Anonymous Pro', monospace">Anonymous Pro</option>
-      <option value="'Antic', sans-serif">Antic</option>
-      <option value="'Atma', display">Atma</option>
-      <option value="'Balsamiq Sans', display">Balsamiq Sans</option>
+      <option value="ABeeZee">ABeeZee</option>
+      <option value="Aboreto">Aboreto</option>
+      <option value="Abyssinica SIL">Abyssinica SIL</option>
+      <option value="Aclonica">Aclonica</option>
+      <option value="Acme">Acme</option>
+      <option value="Alata">Alata</option>
+      <option value="Alegreya">Alegreya</option>
+      <option value="Alfa Slab One">Alfa Slab One</option>
+      <option value="Alkatra">Alkatra</option>
+      <option value="Allan">Allan</option>
+      <option value="Anonymous Pro">Anonymous Pro</option>
+      <option value="Antic">Antic</option>
+      <option value="Atma">Atma</option>
+      <option value="Balsamiq Sans">Balsamiq Sans</option>
       <option value="Bangers">Bangers</option>
-      <option value="'Boogaloo', display">Boogaloo</option>
-      <option value="'Bubblegum Sans', display">Bubblegum Sans</option>
-      <option value="'Caladea', serif">Caladea</option>
-      <option value="'Carter One', display">Carter One</option>
-      <option value="'Caveat Brush', handwriting">Caveat Brush</option>
-      <option value="'Comfortaa', display">Comfortaa</option>
-      <option value="'Delicious Handrawn', handwriting">
-        Delicious Handrawn
-      </option>
-      <option value="'Economica', sans-serif">Economica</option>
-      <option value="'Faster One', display">Faster One</option>
-      <option value="'Fira Code', monospace">Fira Code</option>
-      <option value="'Fredoka One', display">Fredoka One</option>
-      <option value="'Fugaz One', display">Fugaz One</option>
-      <option value="'Galada', display">Galada</option>
-      <option value="'Galindo', display">Galindo</option>
-      <option value="'Inconsolata', monospace">Inconsolata</option>
-      <option value="'Kaushan Script', handwriting">Kaushan Script</option>
-      <option value="'Merienda One', handwriting">Merienda One</option>
-      <option value="'Roboto Mono', monospace">Roboto Mono</option>
-      <option value="'Source Code Pro', monospace">Source Code Pro</option>
-      <option value="'VT323', monospace">VT323</option>
+      <option value="Boogaloo">Boogaloo</option>
+      <option value="Bubblegum Sans">Bubblegum Sans</option>
+      <option value="Caladea">Caladea</option>
+      <option value="Carter One">Carter One</option>
+      <option value="Caveat Brush">Caveat Brush</option>
+      <option value="Comfortaa">Comfortaa</option>
+      <option value="Delicious Handrawn">Delicious Handrawn</option>
+      <option value="Economica">Economica</option>
+      <option value="Faster One">Faster One</option>
+      <option value="Fira Code">Fira Code</option>
+      <option value="Fredoka One">Fredoka One</option>
+      <option value="Fugaz One">Fugaz One</option>
+      <option value="Galada">Galada</option>
+      <option value="Galindo">Galindo</option>
+      <option value="Inconsolata">Inconsolata</option>
+      <option value="Kaushan Script">Kaushan Script</option>
+      <option value="Merienda One">Merienda One</option>
+      <option value="Roboto Mono">Roboto Mono</option>
+      <option value="Source Code Pro">Source Code Pro</option>
+      <option value="VT323">VT323</option>
 
       <!-- Fin de incluídas por mí -->
 
