cambios en el margen

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
         /* position: absolute; */
         left: 0;
         right: 0;
-        margin: 0;
+        margin-left: 40px;
+        margin-right: 40px;
         /* -webkit-text-stroke: 0px #0000FF;  */
       }
 
@@ -129,6 +130,8 @@
         left: 0;
         right: 0;
         margin: auto;
+        margin-left: 40px;
+        margin-right: 40px;
         /* -webkit-text-stroke: 3px #FF0000;  */
       }
 
@@ -138,6 +141,8 @@
         left: 0;
         right: 0;
         margin: auto;
+        margin-left: 40px;
+        margin-right: 40px;
         /* -webkit-text-stroke: 0px #FFFFFF; */
       }
     </style>
