--- a/main.html
+++ b/main.html
@@ -110,7 +110,8 @@
         left: 0;
         right: 0;
         margin: 0;
-        margin-left: 5px;
+        margin-left: 40px;
+        margin-right: 40px;
       }
 
       .stroke-single-bg {
@@ -118,7 +119,8 @@
         left: 0;
         right: 0;
         margin: auto;
-        margin-left: 5px;
+        margin-left: 40px;
+        margin-right: 40px;
       }
       /* Add a single stroke */
       .stroke-single-fg {
@@ -126,7 +128,8 @@
         left: 0;
         right: 0;
         margin: auto;
-        margin-left: 5px;
+        margin-left: 40px;
+        margin-right: 40px;
       }
     </style>
 
